--- a/MyApplication_V1/app/build.gradle
+++ b/MyApplication_V1/app/build.gradle
@@ -21,11 +21,14 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
     testCompile 'junit:junit:4.12'
     compile 'com.google.android.gms:play-services-appindexing:8.4.0'
+    compile files('src/main/resources/nineoldandroids-2.4.0.jar')
+    compile files('src/main/resources/universal-image-loader-1.9.5.jar')
+    compile files('src/main/resources/universal-image-loader-1.9.5-javadoc.jar')
 }
