--- a/MyApplication_V1/app/src/main/AndroidManifest.xml
+++ b/MyApplication_V1/app/src/main/AndroidManifest.xml
@@ -32,6 +32,11 @@
 
         </activity>
 
+        <activity android:name=".CardDropActivity"
+            android:screenOrientation="landscape">
+
+        </activity>
+
         <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
      App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
         <meta-data
